# metrowrap

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md
.github/workflows/: coverage.yaml  release.yaml
src/: assembler.rs  compiler.rs  elf.rs  error.rs  le.rs  lib.rs  main.rs  makerule.rs  preprocessor.rs  workspace.rs
src/elf/: section.rs  strtab.rs  symtab.rs
tests/: assembler_tests.rs  compiler_tests.rs  dependency_tests.rs  metrowrap_tests.rs  preprocessor_tests.rs  rodata_edge_case_tests.rs  rodata_splitting_implementation_tests.rs
tests/data/: NoMacros.s  macro.inc  only_rodata.c
